[gd_scene load_steps=17 format=3 uid="uid://dui2sgrco7hlr"]

[ext_resource type="Texture2D" uid="uid://gg61tcxp0wm4" path="res://assets/sprites/oryx_16bit_fantasy_creatures_trans.png" id="1_kfo1q"]
[ext_resource type="Script" path="res://scenes/actor/actor.gd" id="1_m1r0q"]
[ext_resource type="Shader" path="res://scenes/actor/actor.gdshader" id="2_pxtsy"]
[ext_resource type="Texture2D" uid="uid://c2gurfx2rgivb" path="res://assets/sprites/oryx_16bit_fantasy_fx_trans.png" id="3_jbt5f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wweye"]
shader = ExtResource("2_pxtsy")
shader_parameter/whitening = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_bf5yh"]
atlas = ExtResource("1_kfo1q")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnnmo"]
atlas = ExtResource("1_kfo1q")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cj3k"]
atlas = ExtResource("1_kfo1q")
region = Rect2(24, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_qa1uk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf5yh")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnnmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cj3k")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_og1h6"]
atlas = ExtResource("3_jbt5f")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr48w"]
atlas = ExtResource("3_jbt5f")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3nb3"]
atlas = ExtResource("3_jbt5f")
region = Rect2(216, 312, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_mu7s2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_og1h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr48w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3nb3")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_wgs6i"]
resource_name = "take_damage"
length = 0.5
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:material:shader_parameter/whitening")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [0.5, 0.0, 0.5, 0.0]
}

[sub_resource type="Animation" id="Animation_447o8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:material:shader_parameter/whitening")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_17h23"]
_data = {
"RESET": SubResource("Animation_447o8"),
"take_damage": SubResource("Animation_wgs6i")
}

[node name="Actor" type="Node2D"]
script = ExtResource("1_m1r0q")

[node name="CharacterSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_wweye")
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_qa1uk")
animation = &"attack"
autoplay = "idle"

[node name="AttackSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-15, -12)
sprite_frames = SubResource("SpriteFrames_mu7s2")
animation = &"attack"
frame = 2
frame_progress = 1.0
speed_scale = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_17h23")
}

[connection signal="animation_finished" from="AttackSprite" to="." method="_on_attack_sprite_animation_finished"]
